// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionFile should apply transformation on icon 1`] = `
<span>
  <input
    className={undefined}
    disabled={false}
    id={42}
    name={undefined}
    onChange={[Function]}
    type="file"
  />
  <label
    className="btn"
    htmlFor={42}
  >
    <Icon
      name="talend-caret-down"
      transform="rotate-180"
    />
    <span>
      Click me
    </span>
  </label>
</span>
`;

exports[`ActionFile should display a Progress indicator if set 1`] = `
<span>
  <input
    className={undefined}
    disabled={true}
    id={42}
    name={undefined}
    onChange={[Function]}
    type="file"
  />
  <label
    className="btn disabled"
    htmlFor={42}
  >
    <CircularProgress
      size="small"
    />
    <span>
      Click me
    </span>
  </label>
</span>
`;

exports[`ActionFile should display a disabled Icon 1`] = `
<span>
  <input
    className={undefined}
    disabled={true}
    id={42}
    name={undefined}
    onChange={[Function]}
    type="file"
  />
  <label
    className="btn disabled"
    htmlFor={42}
  >
    <Icon
      name="talend-caret-down"
      transform={undefined}
    />
    <span>
      Click me
    </span>
  </label>
</span>
`;

exports[`ActionFile should pass all props to the Button 1`] = `
<span>
  <input
    className={undefined}
    disabled={false}
    id={42}
    name={undefined}
    onChange={[Function]}
    type="file"
  />
  <label
    className="btn"
    htmlFor={42}
  >
    <Icon
      name="talend-caret-down"
      transform={undefined}
    />
    <span>
      Click me
    </span>
  </label>
</span>
`;

exports[`ActionFile should render a div with a input[type="file"] and a label to mimic a button 1`] = `
<span>
  <input
    className={undefined}
    disabled={false}
    id={42}
    name={undefined}
    onChange={[Function]}
    type="file"
  />
  <label
    className="btn"
    htmlFor={42}
  >
    <Icon
      name="talend-caret-down"
      transform={undefined}
    />
    <span>
      Click me
    </span>
  </label>
</span>
`;

exports[`ActionFile should render action with html property name = props.name if set 1`] = `
<span>
  <input
    className={undefined}
    disabled={false}
    id={42}
    name="custom_name"
    onChange={[Function]}
    type="file"
  />
  <label
    className="btn"
    htmlFor={42}
  >
    <Icon
      name="talend-caret-down"
      transform={undefined}
    />
    <span>
      Click me
    </span>
  </label>
</span>
`;

exports[`ActionFile should reverse icon/label 1`] = `
<span>
  <input
    className={undefined}
    disabled={false}
    id={42}
    name={undefined}
    onChange={[Function]}
    type="file"
  />
  <label
    className="btn"
    htmlFor={42}
  >
    <span>
      Click me
    </span>
    <Icon
      name="talend-caret-down"
      transform={undefined}
    />
  </label>
</span>
`;
